Game
Board
Cell
Player
Turn
Piece
Token
ThirdParty
Coordinate

@startuml

abstract class Piece {
    bool isValidMove(Coordinate origin, Coordinate destination)
}
class Board {
    Cell getCell(Coordinate c)
}
class Turn {
    void makeMovement(Player p, Coordinate origin, Coordinate destination)
}

ThirdParty --> "*" Token
Player --> "*" Token
Player <--> "1..*" Piece
Player ..> Turn : uses
Piece "*" <--> "1" Cell
Cell ..> Coordinate
Cell "1..*" <--o Board
Board ..> Coordinate

Board : Cell getCell(Coordinate c)

@enduml